--- a/Group9/Views/Components/StoreTableViewCell.xib
+++ b/Group9/Views/Components/StoreTableViewCell.xib
@@ -41,7 +41,7 @@
                             <action selector="seeAllAction:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="ncB-b0-etG"/>
                         </connections>
                     </button>
-                    <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" pagingEnabled="YES" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="JKJ-wy-ds8">
+                    <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" pagingEnabled="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="JKJ-wy-ds8">
                         <rect key="frame" x="0.0" y="50" width="414" height="257.5"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="20" minimumInteritemSpacing="0.0" id="RQw-Yv-4Xo">
