--- a/Group9/Views/PlaceDetail.storyboard
+++ b/Group9/Views/PlaceDetail.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="HPs-qy-vPu">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="vMn-m6-8Nu">
     <device id="retina6_1" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -13,13 +13,13 @@
         <!--Place Detail-->
         <scene sceneID="PMd-fa-3yA">
             <objects>
-                <viewController title="Place Detail" id="vMn-m6-8Nu" customClass="PlaceDetailViewController" customModule="Group9" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="PlaceDetailViewController" title="Place Detail" id="vMn-m6-8Nu" customClass="PlaceDetailViewController" customModule="Group9" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="ZKv-mx-ksv">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="1200"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Wm7-JF-IAr">
-                                <rect key="frame" x="0.0" y="0.0" width="414" height="1166"/>
+                                <rect key="frame" x="0.0" y="-44" width="414" height="1210"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="3KQ-mb-AoZ" userLabel="Content View">
                                         <rect key="frame" x="0.0" y="-88" width="414" height="1490"/>
@@ -260,7 +260,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="qIK-5N-594" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1015.9420289855074" y="-60.267857142857139"/>
+            <point key="canvasLocation" x="1926.0869565217392" y="-60.267857142857139"/>
         </scene>
         <!--Reviews-->
         <scene sceneID="xEf-xI-gub">
@@ -295,7 +295,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Xjf-Ff-enC" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1872" y="-129"/>
+            <point key="canvasLocation" x="2781.1594202898555" y="-129.24107142857142"/>
         </scene>
         <!--Add Review-->
         <scene sceneID="2nt-th-V7Q">
@@ -365,25 +365,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Zas-bZ-Ud5" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3462.3188405797105" y="-132.58928571428572"/>
-        </scene>
-        <!--Navigation Controller-->
-        <scene sceneID="ctI-Lr-GNF">
-            <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="HPs-qy-vPu" sceneMemberID="viewController">
-                    <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="jL9-e2-nus">
-                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
-                        <autoresizingMask key="autoresizingMask"/>
-                    </navigationBar>
-                    <nil name="viewControllers"/>
-                    <connections>
-                        <segue destination="vMn-m6-8Nu" kind="relationship" relationship="rootViewController" id="rui-YF-HfP"/>
-                    </connections>
-                </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="7gm-y6-cFY" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="105.79710144927537" y="-60.267857142857139"/>
+            <point key="canvasLocation" x="4372.463768115942" y="-132.58928571428572"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="zte-XH-DJy">
@@ -401,7 +383,7 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="mE4-6n-rlL" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2552.1739130434785" y="-132.58928571428572"/>
+            <point key="canvasLocation" x="3462.3188405797105" y="-132.58928571428572"/>
         </scene>
     </scenes>
     <resources>
