--- a/Group9/Views/Search.storyboard
+++ b/Group9/Views/Search.storyboard
@@ -134,7 +134,7 @@
         <!--Search Location-->
         <scene sceneID="Kvc-tp-c8a">
             <objects>
-                <viewController modalPresentationStyle="overFullScreen" id="jbv-ZW-Xdd" customClass="SearchNewLocationViewController" customModule="Group9" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="SearchNewLocation" modalPresentationStyle="overFullScreen" id="jbv-ZW-Xdd" customClass="SearchNewLocationViewController" customModule="Group9" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="dpZ-or-Yo6">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -153,7 +153,7 @@
                                         <rect key="frame" x="0.0" y="52" width="414" height="722"/>
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <prototypes>
-                                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="searchLocationCell" id="SrW-03-G9N">
+                                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="searchLocationCell" id="SrW-03-G9N">
                                                 <rect key="frame" x="0.0" y="28" width="414" height="44"/>
                                                 <autoresizingMask key="autoresizingMask"/>
                                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="SrW-03-G9N" id="6sl-Hf-Ooe">
