--- a/Group9/Views/PlaceDetail.storyboard
+++ b/Group9/Views/PlaceDetail.storyboard
@@ -132,7 +132,7 @@
                                                                                     </userDefinedRuntimeAttribute>
                                                                                 </userDefinedRuntimeAttributes>
                                                                                 <connections>
-                                                                                    <action selector="callendarButtonAction:" destination="vMn-m6-8Nu" eventType="touchUpInside" id="gQd-UQ-q8i"/>
+                                                                                    <action selector="calendarButtonAction:" destination="vMn-m6-8Nu" eventType="touchUpInside" id="gQd-UQ-q8i"/>
                                                                                 </connections>
                                                                             </button>
                                                                         </subviews>
