--- a/Group9/Views/Components/StoreListTableViewCell.xib
+++ b/Group9/Views/Components/StoreListTableViewCell.xib
@@ -13,29 +13,29 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="StoreTableViewCell" id="KGk-i7-Jjw" customClass="StoreListTableViewCell" customModule="Group9" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="414" height="111"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="StoreTableViewCell" rowHeight="134" id="KGk-i7-Jjw" customClass="StoreListTableViewCell" customModule="Group9" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="414" height="134"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="414" height="110.5"/>
+                <rect key="frame" x="0.0" y="0.0" width="414" height="133.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="default-img" translatesAutoresizingMaskIntoConstraints="NO" id="Emo-rY-tA6">
-                        <rect key="frame" x="16" y="10.5" width="90" height="90"/>
+                        <rect key="frame" x="16" y="8" width="118" height="118"/>
                         <constraints>
-                            <constraint firstAttribute="height" constant="90" id="MuF-UA-tTf"/>
-                            <constraint firstAttribute="width" constant="90" id="zwP-X7-zgm"/>
+                            <constraint firstAttribute="height" constant="118" id="MuF-UA-tTf"/>
+                            <constraint firstAttribute="width" constant="118" id="zwP-X7-zgm"/>
                         </constraints>
                     </imageView>
                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="icons8-star-30" translatesAutoresizingMaskIntoConstraints="NO" id="LMM-LU-VMa">
-                        <rect key="frame" x="116" y="85" width="15" height="15"/>
+                        <rect key="frame" x="144" y="104.5" width="15" height="15"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="15" id="McK-hI-25G"/>
                             <constraint firstAttribute="height" constant="15" id="g1f-tM-rmc"/>
                         </constraints>
                     </imageView>
                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Chevron" translatesAutoresizingMaskIntoConstraints="NO" id="bcN-Hp-KnG">
-                        <rect key="frame" x="378" y="10" width="20" height="20"/>
+                        <rect key="frame" x="378" y="16" width="20" height="20"/>
                         <color key="tintColor" name="westly green"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="20" id="ITv-w1-Vmt"/>
@@ -43,13 +43,13 @@
                         </constraints>
                     </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="03n-OF-95b">
-                        <rect key="frame" x="116" y="10" width="262" height="24"/>
+                        <rect key="frame" x="144" y="16" width="234" height="24"/>
                         <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="20"/>
-                        <nil key="textColor"/>
+                        <color key="textColor" name="westly green drak"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rnm-of-VJM">
-                        <rect key="frame" x="116" y="39" width="262" height="17"/>
+                        <rect key="frame" x="144" y="45" width="262" height="17"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="262" id="YdC-oa-vy7"/>
                         </constraints>
@@ -58,26 +58,26 @@
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="5.0" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yB3-bx-rQe">
-                        <rect key="frame" x="136" y="83" width="22" height="17"/>
+                        <rect key="frame" x="164" y="102.5" width="22" height="17"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="22" id="Y8V-CO-lcL"/>
                         </constraints>
                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oPM-rB-dmn">
-                        <rect key="frame" x="116" y="61" width="262" height="17"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8WT-qc-Bpl">
+                        <rect key="frame" x="189" y="102.5" width="217" height="17"/>
                         <constraints>
-                            <constraint firstAttribute="width" constant="262" id="4Ds-jL-jyd"/>
+                            <constraint firstAttribute="width" constant="217" id="K4b-Bh-N4B"/>
                         </constraints>
                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                         <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8WT-qc-Bpl">
-                        <rect key="frame" x="161" y="83" width="217" height="17"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oPM-rB-dmn">
+                        <rect key="frame" x="144" y="77.5" width="262" height="17"/>
                         <constraints>
-                            <constraint firstAttribute="width" constant="217" id="K4b-Bh-N4B"/>
+                            <constraint firstAttribute="width" constant="262" id="4Ds-jL-jyd"/>
                         </constraints>
                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                         <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -87,21 +87,21 @@
                 <constraints>
                     <constraint firstItem="rnm-of-VJM" firstAttribute="leading" secondItem="Emo-rY-tA6" secondAttribute="trailing" constant="10" id="4dI-US-Zsq"/>
                     <constraint firstItem="03n-OF-95b" firstAttribute="leading" secondItem="Emo-rY-tA6" secondAttribute="trailing" constant="10" id="93f-0k-dyR"/>
-                    <constraint firstItem="oPM-rB-dmn" firstAttribute="top" secondItem="rnm-of-VJM" secondAttribute="bottom" constant="5" id="9Pn-H6-inS"/>
                     <constraint firstItem="yB3-bx-rQe" firstAttribute="leading" secondItem="LMM-LU-VMa" secondAttribute="trailing" constant="5" id="BIR-2H-nY6"/>
                     <constraint firstItem="rnm-of-VJM" firstAttribute="top" secondItem="03n-OF-95b" secondAttribute="bottom" constant="5" id="GZu-hC-yES"/>
-                    <constraint firstAttribute="bottom" secondItem="LMM-LU-VMa" secondAttribute="bottom" constant="10.5" id="M1q-AL-729"/>
+                    <constraint firstAttribute="bottom" secondItem="LMM-LU-VMa" secondAttribute="bottom" constant="14" id="M1q-AL-729"/>
                     <constraint firstAttribute="trailing" secondItem="bcN-Hp-KnG" secondAttribute="trailing" constant="16" id="P4s-s4-EVW"/>
-                    <constraint firstAttribute="bottom" secondItem="yB3-bx-rQe" secondAttribute="bottom" constant="10.5" id="VvR-t2-r0t"/>
+                    <constraint firstAttribute="bottom" secondItem="yB3-bx-rQe" secondAttribute="bottom" constant="14" id="VvR-t2-r0t"/>
                     <constraint firstItem="8WT-qc-Bpl" firstAttribute="leading" secondItem="yB3-bx-rQe" secondAttribute="trailing" constant="3" id="WtP-WF-YgO"/>
                     <constraint firstItem="oPM-rB-dmn" firstAttribute="leading" secondItem="Emo-rY-tA6" secondAttribute="trailing" constant="10" id="Ypq-yb-oyv"/>
-                    <constraint firstItem="03n-OF-95b" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="10" id="buW-Sh-43r"/>
+                    <constraint firstItem="03n-OF-95b" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="16" id="buW-Sh-43r"/>
                     <constraint firstItem="Emo-rY-tA6" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="16" id="dzU-dT-K09"/>
-                    <constraint firstItem="bcN-Hp-KnG" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="10" id="fZg-iW-V28"/>
+                    <constraint firstItem="bcN-Hp-KnG" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="16" id="fZg-iW-V28"/>
                     <constraint firstItem="bcN-Hp-KnG" firstAttribute="leading" secondItem="03n-OF-95b" secondAttribute="trailing" id="gR0-41-1He"/>
                     <constraint firstItem="Emo-rY-tA6" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="h9o-yJ-evm"/>
                     <constraint firstItem="LMM-LU-VMa" firstAttribute="leading" secondItem="Emo-rY-tA6" secondAttribute="trailing" constant="10" id="q6b-vc-BDl"/>
-                    <constraint firstAttribute="bottom" secondItem="8WT-qc-Bpl" secondAttribute="bottom" constant="10.5" id="upq-Yi-iHq"/>
+                    <constraint firstItem="yB3-bx-rQe" firstAttribute="top" secondItem="oPM-rB-dmn" secondAttribute="bottom" constant="8" id="ulO-gf-sd8"/>
+                    <constraint firstAttribute="bottom" secondItem="8WT-qc-Bpl" secondAttribute="bottom" constant="14" id="upq-Yi-iHq"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
@@ -113,7 +113,7 @@
                 <outlet property="storeRatingTotal" destination="8WT-qc-Bpl" id="qq4-7t-dnM"/>
                 <outlet property="storeTime" destination="oPM-rB-dmn" id="ZoL-3k-CB7"/>
             </connections>
-            <point key="canvasLocation" x="137.68115942028987" y="143.63839285714286"/>
+            <point key="canvasLocation" x="137.68115942028987" y="135.26785714285714"/>
         </tableViewCell>
     </objects>
     <resources>
@@ -122,6 +122,9 @@
         <image name="icons8-star-30" width="30" height="30"/>
         <namedColor name="westly green">
             <color red="0.44705882352941179" green="0.61568627450980395" blue="0.22352941176470589" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+        <namedColor name="westly green drak">
+            <color red="0.21176470588235294" green="0.3843137254901961" blue="0.16862745098039217" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
     </resources>
 </document>
